--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
   width: var(--ring-size);
   height: var(--ring-size);
   position: relative; 
-  background-color: var(--accent);
+  background-color: transparent;
   border-radius: 2rem;
 }
 
@@ -77,7 +77,7 @@ svg {
   display: flex;
   flex-direction: row;
   background-color: var(--background);
-  border-radius: 2rem;
+  border-radius: 2.5rem;
   padding: 0.5rem;
   position: relative;
   z-index: 2;
@@ -143,14 +143,18 @@ button {
   font-weight: bold;
   cursor: pointer;
   border-radius: 0.6rem;
-  border: 0px;
-  background-color: var(--accent);
+  border: 1px;
+  border-style: solid;
+  border-color: var(--primary);
+  background-color: transparent;
   transition: background-color 0.3s ease-in-out;
+  transition: color 0.3s ease-in-out;
   color: var(--primary);
 }
 
 button:hover {
-  background-color: var(--button);
+  background-color: var(--dark-button);
+  color: var(--highlight);
 }
 
 button:disabled {
